syntax = "proto3";

package com.ekocaman.grpc.calculator;

option java_package = "com.ekocaman.grpc.calculator";
option java_outer_classname = "CalculatorModel";

message CalculatorRequest {
  double number1 = 1;
  double number2 = 2;
  OperationType operation = 3;

  enum OperationType {
    ADD = 0;
    SUBTRACT = 1;
    MULTIPLY = 2;
    DIVIDE = 3;
  }
}

message CalculatorResponse {
  double result = 1;
}


service CalculatorService {
  rpc Calculate(CalculatorRequest) returns (CalculatorResponse) {}
}
